# rusty_yolo

./: Cargo.toml  README.md
src/: detector.rs  main.rs
src/py/: video_io.py
