[package]
name    = "rusty_yolo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = "1"
pyo3        = { version = "0.20", features = ["auto-initialize"] }
numpy       = "0.20"
ndarray     = { version = "0.16", features = ["serde"] }
image       = { version = "0.25.6", features = ["png", "jpeg"] }
once_cell   = "1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
ort         = { version = "2.0.0-rc.10", features = ["ndarray"] }

[[bin]]
name = "rusty_yolo"
path = "src/main.rs"
